Tue Sep  7 22:14:43 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/SemanticGraph/Elements.hpp:
	* CCF/CCF/IDL2/Traversal/Elements.hpp:

	  Fixed unused argument warnings.

Tue Sep  7 15:48:19 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Servant_Impl_Base.cpp:
        * ciao/Servant_Impl_Base.cpp:

          Cosmetic changes.

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * DAnCE/ciao/Servant_Impl_T.cpp:
        * DAnCE/ciao/Servant_Impl_T.h:
        * ciao/Servant_Impl_T.cpp:
        * ciao/Servant_Impl_T.h:

          Moved several methods from the generated servant class to the
          template Servant_Impl base class.

Tue Sep  7 10:44:10 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/CIDLC.mpc:
        * CIDLC/CIDLC.vcproj:
        * CIDLC/RepositoryIdGenerator.cpp:
        * CIDLC/RepositoryIdGenerator.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/cidlc.cpp:

          - Updated the RepositoryIdGenerator and re-added the source
            and header files to the build. This generator creates
            repository ids for interfaces and eventtypes, and stores
            them internally in a context variable for later access
            in code generation. It also handles modifications to the
            repository ids stemming from 'typeprefix' or 'typeid'
            declarations.

          - Added generation of 'provide_<facet name>_i' and
            'get_consumer_<event consumer name>_i' methods in the servant,
            which create dummy object references and store them in the
            appropriate port table in the servant base class.

          - Re-implemented the generated 'provide_<facet name>' and
            'get_consumer_<event consumer name>' methods. They now
            use the container's POA to activate the dummy objects