@@ -991,19 +991,19 @@ namespace
     }
 
     virtual void
-    pre (InParameter& p)
+    pre (InParameter&)
     {
       os << "in ";
     }
 
     virtual void
-    pre (OutParameter& p)
+    pre (OutParameter&)
     {
       os << "out ";
     }
 
     virtual void
-    pre (InOutParameter& p)
+    pre (InOutParameter&)
     {
       os << "inout ";
     }
@@ -1119,7 +1119,7 @@ namespace
     }
 
     virtual void
-    names (Type& h)
+    names (Type&)
     {
       os << "{"
          << STRS[COMP_EC] << " "
@@ -1464,7 +1464,7 @@ namespace
     }
 
     virtual void
-    implements (Type& i)
+    implements (Type&)
     {
       // os << " : ";
 
